--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docs",
-  "version": "0.1.0",
+  "name": "my-website",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -18,7 +18,6 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
-    "@razorlabs/wallet-kit": "^0.2.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
@@ -26,13 +25,9 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2",
-    "@docusaurus/theme-classic": "^3.1.0",
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "typescript": "~5.4.5"
+    "typescript": "~5.2.2"
   },
   "browserslist": {
     "production": [
