--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
+    "@razorlabs/wallet-kit": "^0.2.2",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.3.2",
+    "@docusaurus/theme-classic": "^3.3.2",
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
     "typescript": "~5.2.2"
