--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@docusaurus/core": "3.3.2",
     "@docusaurus/preset-classic": "3.3.2",
     "@mdx-js/react": "^3.0.0",
-    "@razorlabs/wallet-kit": "^0.3.0",
+    "@razorlabs/wallet-kit": "^0.4.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
@@ -29,6 +29,7 @@
     "@docusaurus/theme-classic": "^3.3.2",
     "@docusaurus/tsconfig": "3.3.2",
     "@docusaurus/types": "3.3.2",
+    "@types/node": "^22.0.2",
     "typescript": "~5.2.2"
   },
   "browserslist": {
