--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "react-dom": "latest",
     "typescript": "latest",
     "vocs": "latest"
+  },
+  "devDependencies": {
+    "@razorlabs/razorkit": "^0.0.1",
+    "@tanstack/react-query": "^5.54.1",
+    "wagmi": "^2.12.8"
   }
 }
