Update project configuration and documentation
- Bump version in package.json to 1.0.0 and update dependencies, including upgrading @razorlabs/razorkit to 1.0.1 and adding prettier.
- Add a new format script to package.json for code formatting.
- Revise sidebar structure in sidebar.ts to include detailed documentation links.
- Remove outdated vocs.config.ts file and integrate sidebar directly into the documentation.
- Update index.mdx and other documentation pages for improved formatting and content clarity.
- Ensure all markdown files end with a newline for consistency.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "wallet-kit-docs",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
     "build": "vocs build",
-    "preview": "vocs preview"
+    "preview": "vocs preview",
+    "format": "prettier --write \"**/*.{ts,tsx,md,mdx}\""
   },
   "dependencies": {
     "@types/react": "latest",
@@ -15,8 +16,8 @@
     "vocs": "latest"
   },
   "devDependencies": {
-    "@razorlabs/razorkit": "^0.0.1",
+    "@razorlabs/razorkit": "^1.0.1",
     "@tanstack/react-query": "^5.54.1",
-    "wagmi": "^2.12.8"
+    "prettier": "^3.4.2"
   }
 }
