--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@razorlabs/razorkit": "^1.0.1",
     "@tanstack/react-query": "^5.54.1",
+    "@types/react-dom": "^19.0.2",
     "prettier": "^3.4.2"
   }
 }
