--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "format": "prettier --write \"**/*.{ts,tsx,md,mdx}\""
   },
   "dependencies": {
-    "@types/react": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "typescript": "latest",
-    "vocs": "latest"
+    "@aptos-labs/ts-sdk": "^1.33.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "18.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.4",
+    "vocs": "1.0.0-alpha.58"
   },
   "devDependencies": {
     "@razorlabs/razorkit": "^1.0.1",
     "@tanstack/react-query": "^5.54.1",
-    "@types/react-dom": "^19.0.2",
     "prettier": "^3.4.2"
   }
 }
