--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wallet-kit-docs",
-  "version": "1.0.0",
+  "name": "razorkit-docs",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
@@ -20,7 +20,6 @@
   },
   "devDependencies": {
     "@razorlabs/razorkit": "^1.0.1",
-    "@tanstack/react-query": "^5.54.1",
     "prettier": "^3.4.2"
   }
 }
