Update GitHub Actions workflow to deploy from master branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: 🚀 Shipping Build
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
 jobs:
   FTP-Deploy-Action:
     name: 🎉 Deploy
